# cce-2023-registration

./: .env  .env.dev  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
cce_2023_registration/: asgi.py  celery.py  settings.py  storage.py  urls.py  wsgi.py
cce_2023_registration/cce_2023_registration/: asgi.py  settings.py  wsgi.py
cce_2023_registration/core/: models.py
cce_2023_registration/registration/: models.py
cce_2023_registration/storage/: backends.py
cce_2023_registration/templates/: base.html
core/: admin.py  apps.py  context_processors.py  ecommerce.py  exceptions.py  forms.py  managers.py  models.py  payriff.py  renderers.py  signals.py  tasks.py  urls.py  views.py
core/fixtures/: tickets.yaml
core/migrations/: 0001_initial.py  0002_alter_order_order_id_alter_order_paid_amount_and_more.py  0002_remove_order_ticket_order_tickets.py  0002_rename_locality_ticket_site.py  0003_alter_order_status.py  0003_registrationsettings.py  0003_ticket_includes_dinner.py  0004_alter_order_status.py  0004_mealpreference.py  0004_order_session_id_alter_order_order_id.py  0005_alter_order_order_id_alter_order_session_id.py  0005_alter_order_status.py  0005_alter_participant_order_and_more.py  0006_alter_order_order_id.py  0006_auto_20230203_1319.py  0006_rename_datetime_order_created_order_updated.py  0007_alter_order_status.py  0007_alter_ticket_description.py  0008_alter_order_user_alter_orderticket_order_and_more.py  0008_rename_active_ticket_is_active.py  0009_alter_order_unique_together.py  0009_remove_ticket_type_delete_tickettype.py  0010_alter_order_order_id_alter_order_paid_amount_and_more.py  0010_ticket_variant.py  0018_kborder.py  (+19 more)
docker/: docker-compose.base.yml  docker-compose.prod.yml  docker-compose.yml  w-postgresql.dev.yml  w-postgresql.yml  w-rabbitmq.yml
(+37 files in other folders)
