[tool.poetry]
name = "cce-2023-registration"
version = "0.1.0"
description = ""
authors = ["Gadir Rustamli <g.rustamli@ufaz.az>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
django-solo = "^2.0.0"
python-decouple = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
