[tool.poetry]
name = "cce-2023-registration"
version = "0.1.0"
description = ""
authors = ["Gadir Rustamli <g.rustamli@ufaz.az>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
django-solo = "^2.0.0"
python-decouple = "^3.7"
requests = "^2.28.2"
django-browser-reload = "^1.6.0"
django-ckeditor = "^6.5.1"
django-phonenumber-field = { extras = ["phonenumbers"], version = "^7.0.2" }
babel = "^2.11.0"
django-allauth = "^0.52.0"
django-extensions = "^3.2.1"
gunicorn = "^20.1.0"
dj-database-url = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
django-extensions = "^3.2.1"
ipython = "^8.9.0"
notebook = "^6.5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
